Avoid overlap of content with the column sub titles
The page content was overlapping with language, view page sub titles
making the view page link not clickable

--- a/modules/base/styles/ext.cx.base.less
+++ b/modules/base/styles/ext.cx.base.less
@@ -45,6 +45,10 @@ h2 {
 	.mw-ui-one-half(@palm);
 }
 
+.cx-column__content {
+	clear: both;
+}
+
 .cx-column--tools {
 	.mw-ui-one-whole(@palm);
 	background: #f0f0f0;
